kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
  namespace: weather-report
spec:
  selector:
    app: weather-report-api
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30081
