kubernetes/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-report-service
  namespace: weather-report
spec:
  type: NodePort
  selector:
    app: weather-reporter-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
